i added a new some text and change the color and font size of the webpage

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
 <head>
   <title> the test website </title>
-  <h1> 
+  <h1> thiswebsite is for a test</h1>
     <img src="city.jpeg">
+</head>
+<body>
+  <p> the picture is of the city of Denver </p> 
+</html>
