--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <img src="city.jpeg">
 </head>
 <body>
-  <p> the picture is of the city of Denver </p> 
+  <p> the picture is of the city of Denver </p>
+</body> 
 </html>
