mades changes to stylr.css and index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title> the test website </title>
   <h1> this website is for a test</h1>
     <img src="city.jpeg">
+    <link rel="https://nsimoneaux.github.io/p4test2/"
 </head>
 <body>
   <p> the picture is of the city of Denver </p>
